packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_aliased_key_shorthand_unpack.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"def { .b = c } = a\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: false
      lhs:
        - value:
            TableUnpack:
              elements:
                - Valid:
                    key:
                      value:
                        String:
                          segments:
                            - b
                          arguments: []
                      start:
                        line: 1
                        column: 7
                      end:
                        line: 1
                        column: 9
                    variable:
                      value:
                        Symbol: c
                      start:
                        line: 1
                        column: 12
                      end:
                        line: 1
                        column: 13
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 15
      rhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 18
          end:
            line: 1
            column: 19
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 19
