packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_break.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"break\".chars().collect())"
---
- value: Break
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 6
