packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_empty_unpack.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"def {} = a\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: false
      lhs:
        - value:
            TableUnpack:
              elements: []
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 7
      rhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 10
          end:
            line: 1
            column: 11
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 11
