packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_explicit_unpack.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"def { [1] = b } = a\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: false
      lhs:
        - value:
            TableUnpack:
              elements:
                - Valid:
                    key:
                      value:
                        Int: 1
                      start:
                        line: 1
                        column: 8
                      end:
                        line: 1
                        column: 9
                    variable:
                      value:
                        Symbol: b
                      start:
                        line: 1
                        column: 13
                      end:
                        line: 1
                        column: 14
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 16
      rhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 19
          end:
            line: 1
            column: 20
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 20
