packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_export.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"export a = b\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: true
      lhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 8
          end:
            line: 1
            column: 9
      rhs:
        - value:
            Symbol: b
          start:
            line: 1
            column: 12
          end:
            line: 1
            column: 13
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 13
