packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_index_shorthand_unpack.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"def { b } = a\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: false
      lhs:
        - value:
            TableUnpack:
              elements:
                - value:
                    Valid:
                      key:
                        value:
                          Int: 1
                        start:
                          line: 1
                          column: 7
                        end:
                          line: 1
                          column: 8
                      variable:
                        value:
                          Symbol: b
                        start:
                          line: 1
                          column: 7
                        end:
                          line: 1
                          column: 8
                  start:
                    line: 1
                    column: 7
                  end:
                    line: 1
                    column: 8
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 10
      rhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 13
          end:
            line: 1
            column: 14
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 14
