packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_multiple_assignment_when_more_declarations.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"def a, b = c\".chars().collect())"
---
- value:
    Definition:
      is_constant: true
      is_export: false
      lhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 6
        - value:
            Symbol: b
          start:
            line: 1
            column: 8
          end:
            line: 1
            column: 9
      rhs:
        - value:
            Symbol: c
          start:
            line: 1
            column: 12
          end:
            line: 1
            column: 13
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 13
