packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__statements__tests__should_parse_mut.snap
---
source: packages/moonjuice-parser/src/tests/statements.rs
expression: "$crate :: tokenise_and_parse(\"mut a = b\".chars().collect())"
---
- value:
    Definition:
      is_constant: false
      is_export: false
      lhs:
        - value:
            Symbol: a
          start:
            line: 1
            column: 5
          end:
            line: 1
            column: 6
      rhs:
        - value:
            Symbol: b
          start:
            line: 1
            column: 9
          end:
            line: 1
            column: 10
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 10
